--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,10 @@
     <ul role="list" class="articles__list flow"><li>
   <article class="snippet">
     <img src="/assets/blog/article-5.jpg" alt="This is a test" class="snippet__imag">
-    <h3 class="snippet__title"><a href="/blog/2021-06-15-my-fifth-article/">My Fifth Article</a></h3>
+    <h3 class="snippet__title"><a href="/blog/2021-06-15-my-fifth-article copy/">My Fifth Article</a></h3>
     <p class="snippet__meta">par <span>Kevin Powell</span> le <span>15 juin 2021</span></p>
     <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p> 
-    <a href="/blog/2021-06-15-my-fifth-article/" class="btn btn--primary">Continue Reading</a>
+    <a href="/blog/2021-06-15-my-fifth-article copy/" class="btn btn--primary">Continue Reading</a>
   </article>
 </li><li>
   <article class="snippet">
